--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#949E8E</color>
-    <color name="colorPrimaryDark">#6F796B</color>
+    <color name="colorPrimary">#C3D23B</color>
+    <color name="colorPrimaryDark">#7D8724</color>
     <color name="colorPrimaryLight">#ECF4DC</color>
     <color name="colorAccent">#EBBCBD</color>
     <color name="black">#000000</color>
