--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginHorizontal="10dp"
-    android:layout_marginTop="10dp"
+    android:layout_margin="10dp"
     app:cardCornerRadius="10dp"
     android:id="@+id/card">
 
