--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorPrimaryLight">#ECF4DC</color>
     <color name="colorAccent">#EBBCBD</color>
     <color name="black">#000000</color>
+    <color name="transparent">#00FFFFFF</color>
 
 </resources>
