editing groups and people

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -34,6 +34,9 @@
         <action
             android:id="@+id/action_people_detail_to_addPersonFragment"
             app:destination="@id/addPersonFragment" />
+        <action
+            android:id="@+id/action_people_detail_to_editPersonFragment"
+            app:destination="@id/editPersonFragment" />
     </fragment>
 
 
@@ -75,6 +78,9 @@
         <action
             android:id="@+id/action_nav_people_to_addGroupFragment"
             app:destination="@id/addGroupFragment"/>
+        <action
+            android:id="@+id/action_nav_people_to_editGroupFragment"
+            app:destination="@id/editGroupFragment" />
     </fragment>
     <fragment
         android:id="@+id/addGroupFragment"
@@ -98,5 +104,27 @@
             app:popUpToInclusive="true"
             app:popUpTo="@+id/addPersonFragment"
             app:launchSingleTop="true"/>
+    </fragment>
+    <fragment
+        android:id="@+id/editGroupFragment"
+        android:name="com.simcom.ecashier.ui.people.EditGroupFragment"
+        android:label="EditGroupFragment"
+        tools:layout="@layout/fragment_add_people">
+        <action
+            android:id="@+id/action_editGroupFragment_to_nav_people"
+            app:destination="@id/nav_people"
+            app:popUpToInclusive="true"
+            app:popUpTo="@+id/editGroupFragment"/>
+    </fragment>
+    <fragment
+        android:id="@+id/editPersonFragment"
+        android:name="com.simcom.ecashier.ui.people.EditPersonFragment"
+        android:label="EditPersonFragment"
+        tools:layout="@layout/fragment_add_people">
+        <action
+            android:id="@+id/action_editPersonFragment_to_people_detail"
+            app:destination="@id/people_detail"
+            app:popUpToInclusive="true"
+            app:popUpTo="@+id/editPersonFragment"/>
     </fragment>
 </navigation>
